src/main/gen/com/qalens/corr/lang/core/jrn/parser/JourneyParser.java
// This is a generated file. Not intended for manual editing.
package com.qalens.corr.lang.core.jrn.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.qalens.corr.lang.core.jrn.psi.JrnElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JourneyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return journeyFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ASSIGNMENT_STEP, IF_ELSE_STEP, JOURNEY_STEP, LISTENER_STEP,
      PRINT_STEP, REST_STEP, SEND_DATA_OVER_WEB_SOCKET_CLIENT_STEP, STEP,
      SYNC_STEP, TRANSACTION_STEP, UNDEF_STEP, VARIABLE_ACTION_STEP,
      WAIT_STEP, WEBSOCKET_CLIENT_CONNECT_STEP),
  };

  /* ********************************************************** */
  // '(' ( (VariableReference ',' VariableReference) | VariableReference?) ')' '=>' (Block | Step)
  public static boolean ArgedFor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedFor")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGED_FOR, null);
    r = consumeToken(b, LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, ArgedFor_1(b, l + 1));
    r = p && report_error_(b, consumeTokens(b, -1, RPAREN, FATARROW)) && r;
    r = p && ArgedFor_4(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (VariableReference ',' VariableReference) | VariableReference?
  private static boolean ArgedFor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedFor_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArgedFor_1_0(b, l + 1);
    if (!r) r = ArgedFor_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VariableReference ',' VariableReference
  private static boolean ArgedFor_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedFor_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VariableReference(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && VariableReference(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VariableReference?
  private static boolean ArgedFor_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedFor_1_1")) return false;
    VariableReference(b, l + 1);
    return true;
  }

  // Block | Step
  private static boolean ArgedFor_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedFor_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block(b, l + 1);
    if (!r) r = Step(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '(' ( (VariableReference ',' VariableReference) | VariableReference?) ')' '=>' ForBlockForText
  public static boolean ArgedForInText(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedForInText")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && ArgedForInText_1(b, l + 1);
    r = r && consumeTokens(b, 0, RPAREN, FATARROW);
    r = r && ForBlockForText(b, l + 1);
    exit_section_(b, m, ARGED_FOR_IN_TEXT, r);
    return r;
  }

  // (VariableReference ',' VariableReference) | VariableReference?
  private static boolean ArgedForInText_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedForInText_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArgedForInText_1_0(b, l + 1);
    if (!r) r = ArgedForInText_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VariableReference ',' VariableReference
  private static boolean ArgedForInText_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedForInText_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VariableReference(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && VariableReference(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // VariableReference?
  private static boolean ArgedForInText_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgedForInText_1_1")) return false;
    VariableReference(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // Expression | FillableObjectTemplate | FillableTextTemplate
  public static boolean Assignable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNABLE, "<assignable>");
    r = Expression(b, l + 1);
    if (!r) r = FillableObjectTemplate(b, l + 1);
    if (!r) r = FillableTextTemplate(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'let' VariableReference '=' (Assignable | ('load' Expression ('from' 'sandbox' Expression)?))
  public static boolean AssignmentStep(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStep")) return false;
    if (!nextTokenIs(b, LET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STEP, null);
    r = consumeToken(b, LET);
    p = r; // pin = 1
    r = r && report_error_(b, VariableReference(b, l + 1));
    r = p && report_error_(b, consumeToken(b, ASSIGN)) && r;
    r = p && AssignmentStep_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Assignable | ('load' Expression ('from' 'sandbox' Expression)?)
  private static boolean AssignmentStep_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStep_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Assignable(b, l + 1);
    if (!r) r = AssignmentStep_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'load' Expression ('from' 'sandbox' Expression)?
  private static boolean AssignmentStep_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStep_3_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LOAD);
    r = r && Expression(b, l + 1);
    r = r && AssignmentStep_3_1_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('from' 'sandbox' Expression)?
  private static boolean AssignmentStep_3_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStep_3_1_2")) return false;
    AssignmentStep_3_1_2_0(b, l + 1);
    return true;
  }

  // 'from' 'sandbox' Expression
  private static boolean AssignmentStep_3_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStep_3_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FROM, SANDBOX);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (VariableReference '.' ('round' |'unique_random_elements'| 'random' | 'sub' | 'div' | 'mod' | 'left' | 'right' | 'array' | 'contains' | 'indexOf' | 'chunked') '(' Expression ')') | (('round' | 'random'|'unique_random_elements' | 'chunked' |'sub' | 'div' | 'mod' | 'left' | 'right' | 'array' | 'contains' | 'indexOf') '(' (Expression ',' Expression)  ')')
  public static boolean BinaryFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryFunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_FUNCTION, "<binary function>");
    r = BinaryFunction_0(b, l + 1);
    if (!r) r = BinaryFunction_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // VariableReference '.' ('round' |'unique_random_elements'| 'random' | 'sub' | 'div' | 'mod' | 'left' | 'right' | 'array' | 'contains' | 'indexOf' | 'chunked') '(' Expression ')'
  private static boolean BinaryFunction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryFunction_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VariableReference(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && BinaryFunction_0_2(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'round' |'unique_random_elements'| 'random' | 'sub' | 'div' | 'mod' | 'left' | 'right' | 'array' | 'contains' | 'indexOf' | 'chunked'
  private static boolean BinaryFunction_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryFunction_0_2")) return false;
    boolean r;
    r = consumeToken(b, ROUND);
    if (!r) r = consumeToken(b, UNIQUERANDOMELEMENTS);
    if (!r) r = consumeToken(b, RANDOM);
    if (!r) r = consumeToken(b, SUB);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, LEFT);
    if (!r) r = consumeToken(b, RIGHT);
    if (!r) r = consumeToken(b, ARRAY);
    if (!r) r = consumeToken(b, CONTAINS);
    if (!r) r = consumeToken(b, INDEXOF);
    if (!r) r = consumeToken(b, CHUNKED);
    return r;
  }

  // ('round' | 'random'|'unique_random_elements' | 'chunked' |'sub' | 'div' | 'mod' | 'left' | 'right' | 'array' | 'contains' | 'indexOf') '(' (Expression ',' Expression)  ')'
  private static boolean BinaryFunction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryFunction_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BinaryFunction_1_0(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && BinaryFunction_1_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'round' | 'random'|'unique_random_elements' | 'chunked' |'sub' | 'div' | 'mod' | 'left' | 'right' | 'array' | 'contains' | 'indexOf'
  private static boolean BinaryFunction_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryFunction_1_0")) return false;
    boolean r;
    r = consumeToken(b, ROUND);
    if (!r) r = consumeToken(b, RANDOM);
    if (!r) r = consumeToken(b, UNIQUERANDOMELEMENTS);
    if (!r) r = consumeToken(b, CHUNKED);
    if (!r) r = consumeToken(b, SUB);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, LEFT);
    if (!r) r = consumeToken(b, RIGHT);
    if (!r) r = consumeToken(b, ARRAY);
    if (!r) r = consumeToken(b, CONTAINS);
    if (!r) r = consumeToken(b, INDEXOF);
    return r;
  }

  // Expression ',' Expression
  private static boolean BinaryFunction_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryFunction_1_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '+' | '-' | '/' | '*' | '%' | '==' | '!=' | '>=' | '<=' | '>' | '<' | '&&' | '||'
  public static boolean BinaryOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OPERATOR, "<binary operator>");
    r = consumeToken(b, OP_PLUS);
    if (!r) r = consumeToken(b, OP_MINUS);
    if (!r) r = consumeToken(b, OP_DIVIDE);
    if (!r) r = consumeToken(b, OP_MULTIPLY);
    if (!r) r = consumeToken(b, OP_MOD);
    if (!r) r = consumeToken(b, OP_EQUAL);
    if (!r) r = consumeToken(b, OP_NOTEQUAL);
    if (!r) r = consumeToken(b, OP_GE);
    if (!r) r = consumeToken(b, OP_LE);
    if (!r) r = consumeToken(b, OP_GT);
    if (!r) r = consumeToken(b, OP_LT);
    if (!r) r = consumeToken(b, OP_AND);
    if (!r) r = consumeToken(b, OP_OR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ((UnaryOperatorExpression | NonOperatorExpression) BinaryOperator)+ (UnaryOperatorExpression | NonOperatorExpression)
  public static boolean BinaryOperatorExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperatorExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OPERATOR_EXPRESSION, "<binary operator expression>");
    r = BinaryOperatorExpression_0(b, l + 1);
    r = r && BinaryOperatorExpression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((UnaryOperatorExpression | NonOperatorExpression) BinaryOperator)+
  private static boolean BinaryOperatorExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperatorExpression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BinaryOperatorExpression_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!BinaryOperatorExpression_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BinaryOperatorExpression_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // (UnaryOperatorExpression | NonOperatorExpression) BinaryOperator
  private static boolean BinaryOperatorExpression_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperatorExpression_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BinaryOperatorExpression_0_0_0(b, l + 1);
    r = r && BinaryOperator(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // UnaryOperatorExpression | NonOperatorExpression
  private static boolean BinaryOperatorExpression_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperatorExpression_0_0_0")) return false;
    boolean r;
    r = UnaryOperatorExpression(b, l + 1);
    if (!r) r = NonOperatorExpression(b, l + 1);
    return r;
  }

  // UnaryOperatorExpression | NonOperatorExpression
  private static boolean BinaryOperatorExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOperatorExpression_1")) return false;
    boolean r;
    r = UnaryOperatorExpression(b, l + 1);
    if (!r) r = NonOperatorExpression(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '{' Step* '}'
  public static boolean Block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, null);
    r = consumeToken(b, LBRACE);
    p = r; // pin = 1
    r = r && report_error_(b, Block_1(b, l + 1));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Step*
  private static boolean Block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Step(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'body' ExtractableTemplate
  public static boolean BodyDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BodyDeclaration")) return false;
    if (!nextTokenIs(b, BODY)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BODY_DECLARATION, null);
    r = consumeToken(b, BODY);
    p = r; // pin = 1
    r = r && ExtractableTemplate(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // BodyDeclaration ('and' HeadersDeclaration)?
  public static boolean BodyStartingRestData(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BodyStartingRestData")) return false;
    if (!nextTokenIs(b, BODY)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BODY_STARTING_REST_DATA, null);
    r = BodyDeclaration(b, l + 1);
    p = r; // pin = 1
    r = r && BodyStartingRestData_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ('and' HeadersDeclaration)?
  private static boolean BodyStartingRestData_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BodyStartingRestData_1")) return false;
    BodyStartingRestData_1_0(b, l + 1);
    return true;
  }

  // 'and' HeadersDeclaration
  private static boolean BodyStartingRestData_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BodyStartingRestData_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && HeadersDeclaration(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '(' Expression ')'
  public static boolean BracketedExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BracketedExpression")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, BRACKETED_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // Step*
  public static boolean CalculationSteps(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CalculationSteps")) return false;
    Marker m = enter_section_(b, l, _NONE_, CALCULATION_STEPS, "<calculation steps>");
    while (true) {
      int c = current_position_(b);
      if (!Step(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CalculationSteps", c)) break;
    }
    exit_section_(b, l, m, true, false, JourneyParser::recoverCalculationSteps);
    return true;
  }

  /* ********************************************************** */
  // STRING_LITERAL | DoubleValue | PositiveIntegerValue | InetegerValue | NullValue | BooleanValue
  public static boolean ConstantExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstantExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_EXPRESSION, "<constant expression>");
    r = consumeToken(b, STRING_LITERAL);
    if (!r) r = consumeToken(b, DOUBLEVALUE);
    if (!r) r = consumeToken(b, POSITIVEINTEGERVALUE);
    if (!r) r = consumeToken(b, INETEGERVALUE);
    if (!r) r = consumeToken(b, NULLVALUE);
    if (!r) r = consumeToken(b, BOOLEANVALUE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // OperatorExpression | NonOperatorExpression
  public static boolean Expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION, "<expression>");
    r = OperatorExpression(b, l + 1);
    if (!r) r = NonOperatorExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
